8Layout Lesson/Lesson 9 Fixed Positioning/css/style.css
/* =================================
  Base Element Styles
==================================== */

* {
	box-sizing: border-box;
}

body {
	font-family: 'Varela Round', sans-serif;
	line-height: 1.6;
	color: #3a3a3a;
}

p {
	font-size: .95em;
	margin-bottom: 1.8em;
}

h2,
h3,
a {
	color: #093a58;
}

h2,
h3,
h4 {
	margin-top: 0;
}

h4 {
	margin-bottom: .4em;
}

a {
	text-decoration: none;
}

img {
	max-width: 100%;
}

figure {
	margin: 0;
	line-height: 0;
	position: relative;
}

figcaption {
	font-size: .9em;
	line-height: 1.5;
	color: #fff;
	padding: 1em;
	background: rgba(19,43,102, .85);

	position: absolute;
	bottom: 0;
	width: 100%;
}

/* =================================
  Base Layout Styles
==================================== */

/* ---- Navigation ---- */

.name {
	font-size: 1.25em;
	margin: 0;
}

.main-nav {
	margin-top: 5px;
}

	.name a,
	.main-nav a {
		display: block;
		text-align: center;
		padding: 10px 15px;
	}

	.main-nav a {
		font-size: .95em;
		color: #3acec2;
		text-transform: uppercase;
	}

	.main-nav a:hover {
		color: #093a58;
	}

/* ---- Layout Containers ---- */

.main-header {
	padding-top: .5em;
	padding-bottom: .5em;
}

.banner,
.main-footer {
	text-align: center;
}

.banner {
	color: #fff;
	background: #3acec2;
	padding: 3.2em 0;
	margin-bottom: 60px;
}

.col {
	padding-right: 1em;
	padding-left: 1em;
}

.main-footer {
	background: #d9e4ea;
	padding: 2em 0;
	margin-top: 30px;
}

/* ---- Page Elements ---- */

.logo {
	width: 190px;
}

.headline {
	margin-bottom: 0;
}

.icon-location {
	width: 35px;
	position: absolute;
	top: -15px;
	right: -15px;
}

/* =================================
  Media Queries
==================================== */

@media (min-width: 769px) {

	.main-header {
		position: fixed;
		background: #fff;
		box-shadow: (0, 0, 0, .4);
		width: 100%;
		offset: 0;
		/*  This will do everything, except clear the overlap of the header/body elements*/
	}

	.container {
		width: 90%;
		margin: 0 auto;
	}

	.name,
	.col {
		float: left;
	}

	.primary,
	.secondary {
		width: 50%;
	}

	.main-nav {
		float: right;
	}

	.main-nav li {
		display: inline-block;
		margin-left: 15px;
	}

	.tagline {
		font-size: 1.4em;
	}

	/* ---- Float clearfix ---- */

	.clearfix::after {
		content: " ";
		display: table;
		clear: both;
	}

}

@media (min-width: 1025px) {

	.container {
		width: 80%;
		max-width: 1150px;
	}

	.primary {
		width: 40%;
	}

	.secondary,
	.tertiary {
		width: 30%;
	}

}

